# oxgl

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  index.scss
demo/: Cargo.toml
demo/src/: main.module.scss  main.rs
demo/styles/stylance/: _index.scss  main.module-1ee4825.scss
oxgl/: Cargo.toml  README.md
oxgl/src/: lib.rs
oxgl/src/common/: camera.rs  loader.rs  material.rs  mesh.rs  mod.rs  postprocessing.rs  shader.rs
oxgl/src/core/: animator.rs  color.rs  id.rs  mod.rs  transform.rs
oxgl/src/pp_shaders/: blur.frag  chromatic.frag  film_grain.frag  grayscale.frag  invert.frag  pixelate.frag  postprocess.vert  vignette.frag
oxgl/src/renderer_3d/: cssrenderer.rs  gizmo.rs  light.rs  mod.rs  postprocessing.rs  primitive.rs  scene.rs  shadowmap.rs
oxgl/src/shaders/: phong.frag  phong.vert  shadow_depth.vert
src/: main.rs
src/canvas/: mod.rs
src/canvas/common/: material.rs  mesh.rs  mod.rs
src/canvas/renderer_3d/: gizmo.rs  light.rs  scene.rs
src/core/: animator.rs  id.rs  transform.rs
src/renderer/: animator.rs  camera.rs  gizmo.rs  light.rs  material.rs  mesh.rs  mod.rs  object.rs  primitive.rs  scene.rs  shader.rs  util.rs
src/shaders/: lambert.frag  lambert.vert  phong.frag  phong.vert  standard.frag  unlit.vert
